<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">MyTraveler</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_connection_mode">Connection mode</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="advanced_search">Settings</string>
    <string name="areas">Areas</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="close_menu">Close menu</string>
    <string name="coordinates">Coordinates</string>
    <string name="default_headline">Pays de la Loire</string>
    <string name="email">Email</string>
    <string name="gallery">Gallery</string>
    <string name="guest_account">Guest account</string>
    <string name="is_no_longer_bookmarked">%s is no longer bookmarked</string>
    <string name="is_now_bookmarked">%s is now bookmarked</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_application">Loading&#8230;</string>
    <string name="map">Map</string>
    <string name="menu">Menu</string>
    <string name="messages">Messages</string>
    <string name="navigation">Navigation</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_bookmarks">Bookmarks</string>
    <string name="navigation_catalog">Catalog</string>
    <string name="navigation_advanced_search">Advanced search</string>
    <string name="navigation_take_me_a_tour">Take me a tour</string>
    <string name="navigation_messenger">Messenger</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_synchronize">Synchronize data</string>
    <string name="navigation_To">Naviguer vers ...</string>
    <string name="no_network">No network connection</string>
    <string name="no_network_details">Please check your internet connection and application connection mode.</string>
    <string name="now_disconnected_modetext">You are now in disconnected mode.</string>
    <string name="now_connected_modetext">You are now in connected mode.</string>
    <string name="no_result">No results</string>
    <string name="not_implemented">Not yet implemented.</string>
    <string name="offline_mode">Offline</string>
    <string name="online_mode">Online</string>
    <string name="open_menu">Open menu</string>
    <string name="poi_list">Points of interest</string>
    <string name="quick_search">Quick search</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="select_geographical_area">Select geographical area</string>
    <string name="select_theme">Select theme</string>
    <string name="settings">Settings</string>
    <string name="sync_alert">Do you want to synchronize data now ?</string>
    <string name="sync_mode">Synchronization mode</string>
    <string name="sync_mode_ask">Ask me each time</string>
    <string name="sync_mode_auto">Automatic (never ask)</string>
    <string name="sync_mode_never">Never synchronize</string>
    <string name="take_me_a_tour">Take me a tour</string>
    <string name="themes">Themes</string>
    <string name="visit_website">WWW</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    
    <integer name="card_flip_time_full">500</integer>
    <integer name="card_flip_time_half">250</integer>
    
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</string>
</resources>