<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/select_geographical_area_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_geographical_area"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <Spinner
        android:id="@+id/geographical_area_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/select_theme_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_theme"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <Spinner
        android:id="@+id/theme_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/keyword_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/search_button"
        android:text="@string/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>