<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_navigation"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:background="@color/menu_background" >

    <ImageView
        android:id="@+id/navigation_header_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="false"
        android:contentDescription="@null"
        android:scaleType="fitStart"
        android:src="@drawable/default_header_image" />

    <ImageView
        android:id="@+id/profile_avatar_image_view"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@id/navigation_header_image_view"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/drop_shadow"
        android:contentDescription="@null"
        android:padding="6dp"
        android:src="@drawable/default_avatar" />

    <TextView
        android:id="@+id/profile_username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/profile_avatar_image_view"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@id/profile_avatar_image_view"
        android:text="@string/guest_account"
        android:textAppearance="?android:attr/textAppearanceMediumInverse"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/profile_avatar_image_view"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@id/profile_avatar_image_view"
        android:text="@string/offline_mode"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textStyle="italic" />

    <ScrollView
        android:id="@+id/navigation_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_avatar_image_view" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/navigation_category_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_item_category_background"
                android:text="@string/navigation"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/navigation_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice"
                android:divider="@color/menu_divider"
                android:dividerHeight="1dp"
                android:listSelector="@drawable/navigation_item_selector"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/settings_category_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_item_category_background"
                android:text="@string/settings"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/settings_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="singleChoice"
                android:divider="@color/menu_divider"
                android:dividerHeight="1dp"
                android:listSelector="@drawable/navigation_item_selector"
                android:scrollbars="none" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>